# C-IZ2

./: .gitignore  .travis.yml  README.md
iz2_tests/: CMakeLists.txt  unit_tests.cpp
multi_search/: CMakeLists.txt
multi_search/include/: multi_search.h
multi_search/src/: multi_search.c
single_search/: CMakeLists.txt
single_search/include/: single_search.h
single_search/src/: single_search.c
texts/: test0.txt
